--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div>
             <p>My name is Haley Magnani, and I am a student at the University of Eau Claire, Wisconsin. I grew up in Eden Prairie, Minnesota, and I’m also a triplet (brother and sister). I transferred from the University of Minnesota Duluth, where I previously found my passion for graphic design. I am currently majoring in Graphic Communications, learning new things every day.<br>I have done many different projects, and I’ve always wanted to be as creative as possible with them.</p>
         </div>
-        <img src="images/IMG_3263 Small.jpeg">
+        <img src="images/IMG_4683.jpeg">
         </section>
         <section class="projects">
             <h1 id="projects">Projects</h1>
